<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_navigation_height"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.setju.android.infinity.AppFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/app_info_layout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/about">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_icon"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_name"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    tools:text="V1.0 (Beta)" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:gravity="center"
                    android:id="@+id/about_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/about_app"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/devIconCD"
                    android:src="@drawable/ic_action_dev" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/designed_by"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/dev_name"
                    android:textSize="24sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dev_facebook"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/devFbCD"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_facebook" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginStart="12dp"
                        android:background="@color/background_dark" />


                    <ImageView
                        android:id="@+id/dev_linkedin"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/devLinkedInCD"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_linkedin" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
