<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:padding="8dp"
            android:id="@+id/user_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:background="@color/background_light"
            android:textColor="@android:color/black"
            android:gravity="center"
            tools:text="Welcome, Gagan"/>

        <include
            layout="@layout/carousal_layout"
            android:id="@+id/carousalLayout"
            />


        <TextView
            android:id="@+id/countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/carousalLayout"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:paddingTop="12dp"
            android:text="@string/countdown"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <include
            android:id="@+id/countdownTimer"
            layout="@layout/countdown_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/countdown"
            />

        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infinity_status"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/countdownTimer"
            tools:text="Now LIVE!"
            android:visibility="gone"
            />


        <TextView
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/infinity_status"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/infinity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:text="@string/infinity"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@id/infinityCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/semicircle"
            android:contentDescription="@string/semiCircleContentDesc" />

        <android.support.v7.widget.CardView
            app:cardElevation="0dp"
            android:id="@+id/infinityCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infinity"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardBackgroundColor="#F2FFFFFF"
            >

            <LinearLayout
                android:paddingTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="center"/>

                <TextView
                    android:lineSpacingExtra="2dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/aboutInfinity"
                    android:textSize="16sp" />

                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_marginTop="12dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/social"/>

                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/instagram"
                        android:contentDescription="@string/instaCD"
                        android:scaleType="fitCenter"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_instagram"/>

                    <ImageView
                        android:id="@+id/facebook"
                        android:contentDescription="@string/fbCD"
                        android:scaleType="fitCenter"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_facebook"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp" />

                    <ImageView
                        android:id="@+id/youtube"
                        android:contentDescription="@string/websiteCD"
                        android:layout_marginStart="16dp"
                        android:scaleType="fitCenter"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_youtube"
                        android:layout_marginLeft="16dp" />

                    <ImageView
                        android:id="@+id/website"
                        android:contentDescription="@string/websiteCD"
                        android:scaleType="fitCenter"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_website"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/infinityCard"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/setJU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator2"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:text="@string/setJU"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/setJUCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setJU"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="@dimen/bottom_navigation_extra"
            app:cardCornerRadius="4dp"
            app:cardBackgroundColor="#F2FFFFFF"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:id="@+id/chairman"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/chairman1"
                    />

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="#1A237E"
                    android:text="@string/DrChenraj"/>

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/President"/>

                <TextView
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/aboutSetJU"
                    android:textSize="16sp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/nav_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_map"
                    app:fabSize="normal"
                    android:layout_marginRight="16dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>

</ScrollView>