<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_navigation_height"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.setju.android.infinity.ContactFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:fontFamily="@font/roboto_mono"
                android:padding="8dp"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FacultyCoordinators"
                android:background="@color/background_light"/>


            <!-- Cultural Secretary  -->


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat_regular"
                        android:padding="12dp"
                        android:text="@string/CulturalSecretary"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/contactRV1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <!-- Organizer -->


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat_regular"
                        android:padding="12dp"
                        android:text="@string/organizer"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/contactRV2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:fontFamily="@font/roboto_mono"
                android:padding="8dp"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StudentCoordinators"
                android:background="@color/background_light"/>


            <!-- Marketing Team -->


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                android:paddingBottom="8dp"
                app:cardMaxElevation="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat_regular"
                        android:padding="12dp"
                        android:text="@string/MarketingTeam"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/contactRV4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <!-- Sponsorship Team-->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                android:paddingBottom="8dp"
                app:cardMaxElevation="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat_regular"
                        android:padding="12dp"
                        android:text="@string/SponsorshipTeam"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/contactRV5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <!-- Event organizer Team -->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat_regular"
                        android:padding="12dp"
                        android:text="@string/EventTeam"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/contactRV3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>



    </ScrollView>


</LinearLayout>
